fixed flex compatibility on IOS 8

--- a/src/views/Home/page.less
+++ b/src/views/Home/page.less
@@ -295,6 +295,7 @@ main{
           display: -ms-flex;
           display: flex;
           box-sizing: border-box;
+          -webkit-box-pack: center;
           -webkit-justify-content: space-around;
           justify-content: space-around;
           .count {
